2004-07-01	Florian Boor  	<florian.boor@kernelconcepts.de>
	* theme.c, appmgr_setup.c: Applied several patches that fix hardcoded 
	  pathes and gconf related breakage. Contributed by Jim Huang.

2004-06-28	Florian Boor  	<florian.boor@kernelconcepts.de>

	* ipaqscreen/main.c, brightness*, callbacks.*: Merged in new
	  functions from minilite.c. Removed obsolete on/off setting.
	* suid.c: Removed obsolete light on/off stuff.	

2004-06-18  Philip Blundell  <philb@gnu.org>

	* gpe-conf.desktop.in: Correct icon name.

2004-06-17	Florian Boor  	<florian.boor@kernelconcepts.de>
	* Released V 0.1.11
	* battery.c, sysinfo.c: Minor fixes: Device needs reopening. Formating.
	* sysinfo.c: Swapped methods identifying flash size.
	* sysinfo.c: Added some Zaurus models.
	* sysinfo.c, Makefile: We know about Familiar and OpenEmbedded now.
	* Makefile: Version pushed to 0.1.11.
	* sysinfo.c: Several minor fixes.
	* logread.c: Added missing borders.
	* interface.c: Removed stupid tabs.
	* suid.c, network.c: Removed obsolete DHCP setting.
	* interface.c, network.c: Removed toolbar style setting.
	* calibrate.c: Removed obsolete mbcontrol call. Fixed strange behaviour.

2004-06-16	Florian Boor  	<florian.boor@kernelconcepts.de>
	* theme.c: Second step of teaching gpe-conf gconf.

2004-06-15	Florian Boor  	<florian.boor@kernelconcepts.de>
	* theme.c: First step of teaching gpe-conf gconf.
	* sysinfo.c: Try to get flash size from /proc/mtd too. 

2004-06-12	Florian Boor  	<florian.boor@kernelconcepts.de>
	* battery.c: Added some APM support. With some luck it should work on any 
	             system with /proc/apm.
	
2004-06-11	Florian Boor  	<florian.boor@kernelconcepts.de>
	* users/interface.h: Removed obsolete cruft.
	* logread.c: Fixed missing setup of scrollbars.
	* sysinfo.c: Fixed multiple sources of segfaults on non-iPaq platforms.
	* sysinfo.c, Makefile: Improved information on several platforms.
	
2004-06-10	Florian Boor  	<florian.boor@kernelconcepts.de>